@@ -840,6 +840,7 @@
 
         <dt><code>stable</code></dt>
         <dd>
+          <p>Deprecated and slated for removal in February 2013.</p>
           <p>Attempts to always assign a given flow to the same slave
           consistently.  In an effort to maintain stability, no load
           balancing is done.  Uses a similar hashing strategy to
